Changed domain from .eu to .info and removed Twitter

--- a/index.html
+++ b/index.html
@@ -8,35 +8,31 @@
     <meta name="description" content="This is my personal website on which I tell a bit about myself with a focus on my professional occupation." />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Peter Thomas Horn" />
-    <meta property="og:description" content="Personal website of Peter Horn" />
+    <meta property="og:description" content="Personal website of Peter Thomas Horn" />
     <meta property="og:locale" content="en_UK" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://peterthomashorn.eu/mstile-310x310.png" />
-    <link rel="canonical" href="https://peterthomashorn.eu" />
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://peterthomashorn.eu/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://peterthomashorn.eu/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://peterthomashorn.eu/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://peterthomashorn.eu/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://peterthomashorn.eu/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://peterthomashorn.eu/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://peterthomashorn.eu/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://peterthomashorn.eu/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.eu/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.eu/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.eu/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.eu/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.eu/favicon-128.png" sizes="128x128" />
+    <meta property="og:image" content="https://peterthomashorn.info/mstile-310x310.png" />
+    <link rel="canonical" href="https://peterthomashorn.info" />
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://peterthomashorn.info/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://peterthomashorn.info/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://peterthomashorn.info/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://peterthomashorn.info/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://peterthomashorn.info/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://peterthomashorn.info/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://peterthomashorn.info/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://peterthomashorn.info/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-128.png" sizes="128x128" />
     <meta name="application-name" content="Peter Thomas Horn"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="https://peterthomashorn.eu/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="https://peterthomashorn.eu/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="https://peterthomashorn.eu/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="https://peterthomashorn.eu/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="https://peterthomashorn.eu/mstile-310x310.png" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@alomvar" />
-    <meta name="twitter:title" content="Peter Thomas Horn" />
-    <meta name="twitter:description" content="This is my personal website on which I tell a bit about myself with a focus on my professional occupation." />
+    <meta name="msapplication-TileImage" content="https://peterthomashorn.info/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="https://peterthomashorn.info/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="https://peterthomashorn.info/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="https://peterthomashorn.info/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="https://peterthomashorn.info/mstile-310x310.png" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="fontello/css/fontello.css">
     <style rel="stylesheet" type="text/css">
@@ -163,7 +159,6 @@
             <h1>Peter Thomas Horn</h1>
             <p>and this is my personal website which I am currently working on.</p>
             <ul class="icons">
-                <li><a href="https://twitter.com/peterthomashorn" target="_blank"><i class="fa icon-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://github.com/peterthomashorn" target="_blank"><i class="fa icon-github" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.xing.com/profile/PeterThomas_Horn" target="_blank"><i class="fa icon-xing" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><i class="fa icon-linkedin" aria-hidden="true"></i></a></li>
