--- a/index.html
+++ b/index.html
@@ -34,100 +34,7 @@
     <meta name="msapplication-wide310x150logo" content="https://peterthomashorn.info/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="https://peterthomashorn.info/mstile-310x310.png" />
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="fontello/css/fontello.css">
-    <style rel="stylesheet" type="text/css">
-        html, body {
-            height: 100%;
-        }
-
-        body {
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-align: center;
-            -webkit-align-items: center;
-            -ms-flex-align: center;
-            align-items: center;
-            -webkit-box-pack: center;
-            -webkit-justify-content: center;
-            -ms-flex-pack: center;
-            justify-content: center;
-            padding: 1rem;
-            background-color: #303030;
-            background-image: url("body-background.jpg");
-            background-size: cover;
-            background-position: 20% 50%;
-            font-family: "Helvetica Neue", "Droid Sans", "Helvetica", "Segoe UI", sans-serif;
-            font-size: 1.25rem;
-            font-weight: 300;
-            color: rgba(255, 255, 255, 0.6);
-            text-shadow: 2px 2px 4px black;
-            line-height: 1.8rem;
-        }
-
-        a,
-        a:visited,
-        a:active {
-            color: inherit;
-            text-decoration: none;
-            text-shadow: none;
-        }
-
-        a:hover {
-            color: white;
-            text-decoration: none;
-        }
-
-        h1 {
-            font-size: 1.5rem;
-            font-weight: 100;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
-
-        .content {
-            font-weight: 300;
-        }
-
-        .icons {
-            margin-top: 2rem;
-        }
-
-        ul {
-            margin: 0;
-            padding: 0;
-        }
-
-        li {
-            display: inline;
-        }
-
-        .icons a {
-            font-size: 1.5rem;
-            padding: 0.25rem;
-        }
-
-        @media (min-width: 780px) {
-            h1 {
-                padding-left: 1rem;
-                font-size: 2rem;
-            }
-
-            h1 + p {
-                padding-left: 2rem;
-            }
-
-            .icons {
-                padding-left: 3rem;
-            }
-
-            .icons a {
-                padding: 1rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script type="text/javascript">
     function decryptMailingAddress( s ) {
         var n = 0;
@@ -153,19 +60,50 @@
     </script>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="content">
-            <p>Hello, my name is</p>
-            <h1>Peter Thomas Horn</h1>
-            <p>and this is my personal website which I am currently working on.</p>
-            <ul class="icons">
-                <li><a href="https://github.com/peterthomashorn" target="_blank"><i class="fa icon-github" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.xing.com/profile/PeterThomas_Horn" target="_blank"><i class="fa icon-xing" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><i class="fa icon-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="https://stackexchange.com/users/402371/alomvar?tab=accounts" target="_blank"><i class="fa icon-stackexchange" aria-hidden="true"></i></a></li>
-                <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');"><i class="fa icon-mail" aria-hidden="true"></i></a></li>
-            </ul>
+    <header class="header">
+      <div class="wrap">
+        <div class="gutter">
+          <p>Hello, my name is</p>
+          <h1>Peter Thomas Horn</h1>
+          <p>I am a 27 year old world citizen who works as a software developer in Hamburg.</p>
         </div>
-    </div>
+      </div>
+    </header>
+    <main>
+      <section class="section">
+        <div class="wrap">
+          <div class="gutter">
+            <h2>Me Elsewhere</h2>
+            <p>After using Facebook and Twitter for several years I drew the conclusion it is an utter waste of time.
+              You invest time and get nothing out of it. And did I already mention how much I hate advertisement?
+              Nearly everybody should be aware of the privacy issues by now, too. Sadly only few people care and are consequent.
+              So in the end I quit. To me it is nothing else than the capitalist counterpart to Chinas mass surveillance.</p>
+              <p>In the past I used to spend a lot time online and in a purely virtual layer of our society.
+                I am glad I found my way back to focus on life off screen where the actual life happens.
+                I pity those who seem to live in Snapchat and Instagram rather than in tangible reality.</p>
+              <p>After a few months I occassionally missed that handy little outlet like Twitter. So I finally signed up at Mastodon.
+                For professional reasons I am present on Xing and LinkedIn, too.
+                However I often question the sense of being there. Most interaction is with annoying recruiters contacting me for jobs I do not want.
+                That is the reason why it might take a few weeks until I pick up a message on those channels.</p>
+            <ul class="icons">
+                <li><a href="https://mastodon.technology/web/accounts/125538">Mastodon</a></li>
+                <li><a href="https://untappd.com/user/dark1">Untappd</a></li>
+                <li><a href="https://github.com/peterthomashorn" target="_blank">GitHub</a></li>
+                <li><a href="https://www.xing.com/profile/PeterThomas_Horn" target="_blank">Xing</a></li>
+                <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://stackexchange.com/users/402371/alomvar?tab=accounts" target="_blank">StackExchange</a></li>
+                <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');">E-Mail</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="wrap">
+        <div class="gutter">
+          <p>&copy; 2018 Peter Thomas Horn.<br />This website is proudly made <em>without</em> frameworks or content management systems.</p>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
