Extended the lead description

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <div class="gutter">
           <p>Hello, my name is</p>
           <h1>Peter Thomas Horn</h1>
-          <p>I am a 27 year old world citizen who works as a software developer in Hamburg.</p>
+          <p class="lead">I am a 27 year old world citizen who works as a software developer in Hamburg.
+          I am married to the loveliest person in the world, like to taste craft beer and to play music instruments.</p>
         </div>
       </div>
     </header>
