--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <header class="header">
       <div class="wrap">
         <div class="gutter">
-          <p>Hello, my name is</p>
+          <p class="content-top">Hello, my name is</p>
           <h1>Peter Thomas Horn</h1>
           <p class="lead">I am a 27 year old world citizen who works as a software developer in Hamburg.
           I am married to the loveliest person in the world, like to taste craft beer and to play music instruments.</p>
