Added Font Awesome icons for links

--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
                 However I often question the sense of being there. Most interaction is with annoying recruiters contacting me for jobs I do not want.
                 That is the reason why it might take a few weeks until I pick up a message on those channels.</p>
             <ul class="icons">
-                <li><a href="https://mastodon.technology/web/accounts/125538">Mastodon</a></li>
-                <li><a href="https://untappd.com/user/dark1">Untappd</a></li>
-                <li><a href="https://github.com/peterthomashorn" target="_blank">GitHub</a></li>
-                <li><a href="https://www.xing.com/profile/PeterThomas_Horn" target="_blank">Xing</a></li>
-                <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank">LinkedIn</a></li>
-                <li><a href="https://stackexchange.com/users/402371/alomvar?tab=accounts" target="_blank">StackExchange</a></li>
-                <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');">E-Mail</a></li>
+                <li><a href="https://mastodon.technology/web/accounts/125538"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
+                <li><a href="https://untappd.com/user/dark1"><img src="images/untappd.svg" alt="Untappd" class="icon" /></a></li>
+                <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg" alt="GitHub" class="icon" /></a></li>
+                <li><a href="https://www.xing.com/profile/PeterThomas_Horn" target="_blank"><img src="images/xing.svg" alt="Xing" class="icon" /></a></li>
+                <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" class="icon" /></a></li>
+                <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');"><img src="images/envelope.svg" alt="E-Mail" class="icon" /></a></li>
             </ul>
           </div>
         </div>
