Dug out a few phrases I wrote down somewhere else

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <div class="wrap">
           <div class="gutter">
             <h2>Me Elsewhere</h2>
-            <p>After using Facebook and Twitter for several years I drew the conclusion it is an utter waste of time.
+            <p>The overwhelming amount of multimedial input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
+              After using Facebook and Twitter for several years I drew the conclusion it is an utter waste of time.
               You invest time and get nothing out of it. And did I already mention how much I hate advertisement?
               Nearly everybody should be aware of the privacy issues by now, too. Sadly only few people care and are consequent.
               So in the end I quit. To me it is nothing else than the capitalist counterpart to Chinas mass surveillance.</p>
@@ -84,7 +85,8 @@
                 I pity those who seem to live in Snapchat and Instagram rather than in tangible reality.</p>
               <p>After a few months I occassionally missed that handy little outlet like Twitter. So I finally signed up at Mastodon.
                 For professional reasons I am present on Xing and LinkedIn, too.
-                However I often question the sense of being there. Most interaction is with annoying recruiters contacting me for jobs I do not want.
+                However I often question the sense of being there. Engagement neither contributes to my value as a developer nor to my perception of a balanced life.
+                Most interaction is with annoying recruiters contacting me for jobs I do not want.
                 That is the reason why it might take a few weeks until I pick up a message on those channels.</p>
             <ul class="icons">
                 <li><a href="https://mastodon.technology/web/accounts/125538"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
