--- a/index.html
+++ b/index.html
@@ -9,30 +9,15 @@
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Peter Thomas Horn" />
     <meta property="og:description" content="Personal website of Peter Thomas Horn" />
-    <meta property="og:locale" content="en_UK" />
+    <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://peterthomashorn.info/mstile-310x310.png" />
+    <meta property="og:image" content="https://peterthomashorn.info/favicon-196x196.png" />
     <link rel="canonical" href="https://peterthomashorn.info" />
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://peterthomashorn.info/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://peterthomashorn.info/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://peterthomashorn.info/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://peterthomashorn.info/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://peterthomashorn.info/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://peterthomashorn.info/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://peterthomashorn.info/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://peterthomashorn.info/apple-touch-icon-152x152.png" />
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-128x128.png" sizes="128x128" />
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="Peter Thomas Horn"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="https://peterthomashorn.info/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="https://peterthomashorn.info/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="https://peterthomashorn.info/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="https://peterthomashorn.info/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="https://peterthomashorn.info/mstile-310x310.png" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script type="text/javascript">
