--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="https://peterthomashorn.info/favicon-16x16.png" sizes="16x16" />
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/normalize.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/site.css">
     <script type="text/javascript">
     function decryptMailingAddress( s ) {
         var n = 0;
