--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 Most interaction is with annoying recruiters contacting me for jobs I do not want.
                 That is the reason why it might take a few weeks until I pick up a message on those channels.</p>
             <ul class="icons">
-                <li><a href="https://mastodon.technology/web/accounts/125538"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
-                <li><a href="https://untappd.com/user/dark1"><img src="images/untappd.svg" alt="Untappd" class="icon" /></a></li>
+                <li><a href="https://mastodon.technology/web/accounts/125538" target="_blank"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
+                <li><a href="https://untappd.com/user/dark1" target="_blank"><img src="images/untappd.svg" alt="Untappd" class="icon" /></a></li>
                 <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg" alt="GitHub" class="icon" /></a></li>
                 <li><a href="https://www.xing.com/profile/PeterThomas_Horn" target="_blank"><img src="images/xing.svg" alt="Xing" class="icon" /></a></li>
                 <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" class="icon" /></a></li>
