--- a/index.html
+++ b/index.html
@@ -44,12 +44,19 @@
     }
     </script>
 </head>
-<body>
+<body class="default-background">
     <header class="header">
+      <div class="default-background portrait-wrap">
+        <div class="wrap">
+          <div class="gutter">
+            <p class="content-top">Hello, my name is</p>
+            <h1>Peter Thomas Horn</h1>
+          </div>
+          <img class="portrait" src="images/portrait.jpg" alt="Portrait" />
+        </div>
+      </div>
       <div class="wrap">
         <div class="gutter">
-          <p class="content-top">Hello, my name is</p>
-          <h1>Peter Thomas Horn</h1>
           <p class="lead">I am a 27 year old world citizen who works as a software developer in Hamburg.
           I am married to the loveliest person in the world, like to taste craft beer and to play music instruments.</p>
         </div>
