--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peter Thomas Horn</title>
-    <meta name="description" content="This is my personal website on which I tell a bit about myself with a focus on my professional occupation." />
+    <meta name="description" content="A world citizen who works as a software developer in Hamburg. Married to the loveliest person in the world, likes craft beer and making music." />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Peter Thomas Horn" />
     <meta property="og:description" content="Personal website of Peter Thomas Horn" />
@@ -57,7 +57,7 @@
       </div>
       <div class="wrap">
         <div class="gutter">
-          <p class="lead">I am a 27 year old world citizen who works as a software developer in Hamburg.
+          <p class="lead">I am a 28 year old world citizen who works as a software developer in Hamburg.
           I am married to the loveliest person in the world, like to taste craft beer and to play music instruments.</p>
         </div>
       </div>
