Deletion of Xing account

--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
               I am glad I found my way back to focus on life off screen where the actual life happens.
               I pity those who seem to live in Snapchat and Instagram rather than in tangible reality.</p>
             <p>After a few months I occassionally missed that handy little outlet like Twitter. So I finally signed up at Mastodon.
-              For professional reasons I am present on Xing and LinkedIn, too.
+              For professional reasons I am still present on LinkedIn.
               However I often question the sense of being there. Engagement neither contributes to my value as a developer nor to my perception of a balanced life.
               Most interaction is with annoying recruiters contacting me for jobs I do not want.
-              That is the reason why it might take a few weeks until I pick up a message on those channels.</p>
+              That is the reason why it might take a few weeks until I pick up a message on that channel.
+              Xing turned out to be comparable to voluntarily signing up for spam while being redundant next to LinkedIn. I deleted my account after four years at the end of 2018.</p>
           <ul class="icons">
               <li><a href="https://mastodon.technology/@peterthomashorn" target="_blank" rel="me"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
               <li><a href="https://untappd.com/user/dark1" target="_blank"><img src="images/untappd.svg" alt="Untappd" class="icon" /></a></li>
               <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg" alt="GitHub" class="icon" /></a></li>
-              <li><a href="https://www.xing.com/profile/PeterThomas_Horn" target="_blank"><img src="images/xing.svg" alt="Xing" class="icon" /></a></li>
               <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" class="icon" /></a></li>
               <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');"><img src="images/envelope.svg" alt="E-Mail" class="icon" /></a></li>
           </ul>
