Closes #2, #7, #19: Visual overhaul and new content.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peter Thomas Horn</title>
-    <meta name="description" content="A world citizen who works as a software developer in Hamburg. Married to the loveliest person in the world, likes craft beer and making music." />
+    <meta name="description" content="I am a 28 year old world citizen who works as a software developer in Hamburg. Married to the loveliest person in the world, I like to taste craft beer and make music." />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Peter Thomas Horn" />
     <meta property="og:description" content="Personal website of Peter Thomas Horn" />
@@ -53,22 +53,49 @@
                     <h1>Peter Thomas Horn</h1>
                     <p class="lead">I am a 28 year old world citizen who works as a software developer in Hamburg.
                          Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
-                    </div>
                 </div>
-                <div class="header-background-image"></div>
             </div>
+            <div class="header-background-image"></div>
         </div>
     </header>
     <main>
         <section class="section">
             <div class="wrap">
                 <div class="gutter">
-                    <h2>Music</h2>
+                    <p>Some stereotypes about software developers do not apply to me.
+                        I usually do not drink coffee, do not like mechanical keyboards and am an opponent to the home invasion by smart devices and the internet of things.
+                        Ironically I could not care less about computer games which I abandoned a few years ago after it originally sparked my career in the age of 12.</p>
+                    <p>Hungarian and German are my mother tongues. My English was proven safe for international business contracts.
+                        I learned French in school for four years and I engaged with Finnish for a little bit. I have a high affinity to languages.</p>
+                    <p>I am an optimistic nihilist. The YouTube channel "Kurzgesagt - In a Nutshell" produced <a href="https://www.youtube.com/watch?v=MBRqu0YOH14">an appealing short film which explains it nicely</a>.
+                    Summarized in one sentence: I do not believe in anything and consider human existence totally senseless beyond the purpose every individual is completely free to choose. While my purpose revolves around family I see a lot of other joyful things in life, too.</p>
+                    <p>As <a href="https://www.patreon.com/peterthomashorn/creators">a proud patron on Patreon</a> I financially support open-source software projects and creators, including <a href="https://elementary.io">elementary OS</a>.
+                        I think it is important to understand that nothing in life comes for free.
+                        Somebody always pays in some way for what too many people take for granted.
+                        It is not just about appreciation but also about contributing to the perhaps most essential resource: time.
+                        Many projects would benefit vastly, if only one percent of their users would donate one Euro a month.
+                        Maintainers could earn a competitive salary while working on their projects full time. Unfortunately such awareness never really thrived.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section genealogy">
+            <div class="wrap">
+                <div class="gutter">
+                    <h2>Heir of History</h2>
+                    <p>Being a genealogist, my grandfather handed on his work of decades: Five books with several thousand pages about the history of our family.
+                        From Lorraine in France to the Banat in today's Serbia, across the centuries.</p>
+                    <p>Currently I am working on transferring this treasure of information into a digital format.
+                        Not just scanning the books but also registering the contained information in the app MacFamilyTree.</p>
+                </div>
+            </div>
+        </section>
+        <section class="section">
+            <div class="wrap">
+                <div class="gutter">
+                    <h2>I make music</h2>
                     <p>I regularly stray well beyond my home of extreme metal to experience other forms of audible beauty.
                         Actually I believe that the soundtrack of my heart sounds more like Her Name Is Calla or Ólafur Arnalds rather than Cradle Of Filth and As I Lay Dying.</p>
-                        <!-- <p><img src="images/guitars@2x.png" alt="Guitars" /></p> -->
-                    <h3>Bass Guitar</h3>
-                    <!-- <img src="images/bass.jpg" alt="Bass Guitar" /> -->
+                    <h3>Playing the bass guitar</h3>
                     <p>I play bass guitar since I was 15 years old.
                         My first bass was a used Samick I took over from a friend.
                         I do remember my first amp but not its brand or model – it was worn out and muffled in its sound.
@@ -93,7 +120,7 @@
                         With my recent equipment choices my preference changed: I like to play with my ESP, GT-1B and 200B without the hassle of a computer.
                         In fact I became tired of the wiring, the maintenance and the interaction for jamming.
                         I return in case of song writing or recording to Guitar Pro and REAPER on the computer, though.</p>
-                    <h3>Electric Guitar</h3>
+                    <h3>Playing the electric guitar</h3>
                     <p>One year after I started with the bass guitar a few savings manifested in the cheapest electric guitar I could buy on the internet: a brand new Chinese no-name with a body of compressed wood for 40€.
                         Some saturdays I played from 10 in the morning until 10 in the evening.
                         Measured by todays standards the sound was awful and I had to retune every 10 minutes while the strings felt like cutting into my finger tips.
@@ -101,14 +128,14 @@
                     <p>In 2009 I bought a matte black Schecter Diamond Demon from the first salary I got.
                         That was a hefty upgrade totally worth it.
                         The years after I played with thick strings mostly in the tune range of Drop A to Drop C because I liked the deep and metallic sound as present on Bring Me The Horizon's album Suicide Season.</p>
-                    <h3>Keys</h3>
+                    <h3>Playing the keys</h3>
                     <p>I had a cheap MIDI keyboard a few years ago and played sampled instruments as well as synthesizers on my computer.
                         I sold it at some point. It was a simple input device bundled with a hobbyist software.
                         With my wife, who plays piano since the age of four, my interest in playing this instrument reignited.
                         Having a decent Yamaha E-Piano at disposal makes it much more pleasant to play.
                         At most with the remarkably unique sound of Nils Frahms Una Corda sample library for Native Instruments Kontakt.
                         I really love that sound.</p>
-                    <h3>Recording</h3>
+                    <h3>Recording everything</h3>
                     <p>The previously mentioned, cheap MIDI keyboard was bundled with Magix Music Maker.
                         Looking back it was a beginner friendly introduction to the workflow and concept of digital audio workstations.
                         I recorded my first title with Music Maker in 2008.
@@ -125,27 +152,72 @@
                 </div>
             </div>
         </section>
+        <section class="section books">
+            <div class="wrap">
+                <div class="gutter">
+                    <h2>Books on my shelf</h2>
+                    <p>During my childhood I read all books of Harry Potter, The Lord Of The Rings and The Hobbit multiple times.
+                    My eleventh birthday was a great disappointment because I did not receive any acceptance letter from Hogwarts.</p>
+                    <p>Later on I mostly stopped reading classical books. Tablets sparked a little interest again.
+                    I considered it a great deal to potentially have tons of searchable books in small device with you.
+                    After some time I realized the device itself is full of distractions and more complicated to use than the old fashioned pile of paper.
+                    I started to like the analog simplicity again. Paper books do not need to be charged with electricity.
+                    They do not distract you with a thousand other features. They are still on the shelf when your computer is broken.</p>
+                    <p>Even though I do not like to read technical documentation or education in paper form.
+                    It is outdated too quickly, not searchable and often to verbose. I prefer condensed know-how over jabbering as it happens in Podcasts.
+                    Anyway, these are important books to me which I read and often incorporate into my thoughts:</p>
+                    <ul>
+                        <li>Thus Spoke Zarathustra by Friedrich Nietzsche</li>
+                        <li>The brain that changes itself by Norma Doidge</li>
+                        <li>Ten Arguments For Deleting Your Social Media Accounts Right Now by Jaron Lanier</li>
+                        <li>All Poems by Petőfi Sándor</li>
+                        <li>Die Kunst, recht zu behalten by Arthur Schopenhauer</li>
+                        <li>What If? by Randall Munroe</li>
+                        <li>Getting Things Done by David Allen</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="section beer">
+            <div class="wrap beer">
+                <div class="column">
+                    <div class="gutter">
+                        <h2>Beers I like</h2>
+                        <p>My taste focuses on stouts and porters but also includes Kellerbier.
+                            I use the mobile app Untappd to check in on mostly new beers and keep track of what I like while neglecting the social features.
+                            It is funny that I could remember most of the beers I tasted until I hit the mark of 600 distinct brews after five years.<br />
+                            The counting started only in 2014 when I was in Finland. A Couchsurfing host introduced me to craft beer.
+                            I did think not to like beer before I turned almost 24. It was eye opening: the world is full of tasty beer, if you look beyond the industrial mainstream brews which used to rule the markets. Five years later I brew my own beer the first time.</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <figure>
+                        <img src="images/weihenstephan.jpg" alt="Me holding a beer mug." />
+                        <figcaption>On this picture you see me in the Bavarian State Brewery Weihenstephan.
+                            It is the oldest still existing brewery in the world and I was born a short stroll away from there.
+                            When travelling I like to stop by notable breweries.</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
         <section class="section">
             <div class="wrap">
                 <div class="gutter">
                     <h2>Me Elsewhere</h2>
                     <p>The overwhelming amount of multimedial input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
-                        After using Facebook and Twitter for several years I drew the conclusion it is an utter waste of time.
-                        You invest time and get nothing out of it. And did I already mention how much I hate advertisement?
+                        After using Facebook, Mastodon and Twitter for several years I drew the conclusion it is an utter waste of time.
+                        You invest attention and get nothing of worth out of it. And did I already mention how much I hate advertisement?
                         Nearly everybody should be aware of the privacy issues by now, too. Sadly only few people care and are consequent.
-                        So in the end I quit. To me it is nothing else than the capitalist counterpart to Chinas mass surveillance.</p>
+                        So in the end I quit. To me it is nothing else than the capitalist counterpart to Chinas mass surveillance.
+                        I do not want to voluntarily shovel money into the pockets of people harvesting my data.</p>
                     <p>In the past I used to spend a lot time online and in a purely virtual layer of our society.
                         I am glad I found my way back to focus on life off screen where the actual life happens.
                         I pity those who seem to live in Snapchat and Instagram rather than in tangible reality.</p>
-                    <p>After a few months I occassionally missed that handy little outlet like Twitter. So I finally signed up at Mastodon.
-                        For professional reasons I am still present on LinkedIn.
-                        However I often question the sense of being there. Engagement neither contributes to my value as a developer nor to my perception of a balanced life.
-                        Most interaction is with annoying recruiters contacting me for jobs I do not want.
-                        That is the reason why it might take a few weeks until I pick up a message on that channel.
-                        Xing turned out to be comparable to voluntarily signing up for spam while being redundant next to LinkedIn. I deleted my account after four years at the end of 2018.</p>
+                    <p>For professional reasons I am still present on LinkedIn.
+                        However I often question the sense of being there.
+                        Engagement neither contributes to my value as a developer nor to my perception of a balanced life.
+                        Xing (a German competitor of LinkedIn) turned out to be comparable to voluntarily signing up for spam while being redundant next to LinkedIn. I deleted my account after four years at the end of 2018.</p>
                     <ul class="icons">
-                        <li><a href="https://mastodon.technology/@peterthomashorn" target="_blank" rel="me"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
-                        <li><a href="https://untappd.com/user/dark1" target="_blank"><img src="images/untappd.svg" alt="Untappd" class="icon" /></a></li>
                         <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg" alt="GitHub" class="icon" /></a></li>
                         <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" class="icon" /></a></li>
                         <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');"><img src="images/envelope.svg" alt="E-Mail" class="icon" /></a></li>
