--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="gutter">
                     <p>Some stereotypes about software developers do not apply to me.
                         I usually do not drink coffee, do not like mechanical keyboards and am an opponent to the home invasion by smart devices and the internet of things.
-                        Ironically I could not care less about computer games which I abandoned a few years ago after it originally sparked my career in the age of 12.</p>
+                        Ironically I could not care less about computer games which I abandoned a few years ago after they originally sparked my career in the age of 12.</p>
                     <p>Hungarian and German are my mother tongues. My English was proven safe for international business contracts.
                         I learned French in school for four years and I engaged with Finnish for a little bit. I have a high affinity to languages.</p>
                     <p>I am an optimistic nihilist. The YouTube channel "Kurzgesagt - In a Nutshell" produced <a href="https://www.youtube.com/watch?v=MBRqu0YOH14">an appealing short film which explains it nicely</a>.
