Further spelling corrections.

--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                     <p>During my childhood I read all books of Harry Potter, The Lord Of The Rings and The Hobbit multiple times.
                     My eleventh birthday was a great disappointment because I did not receive any acceptance letter from Hogwarts.</p>
                     <p>Later on I mostly stopped reading classical books. Tablets sparked a little interest again.
-                    I considered it a great deal to potentially have tons of searchable books in small device with you.
+                    I considered it a great deal to potentially have tons of searchable books in a small device with you.
                     After some time I realized the device itself is full of distractions and more complicated to use than the old fashioned pile of paper.
                     I started to like the analog simplicity again. Paper books do not need to be charged with electricity.
                     They do not distract you with a thousand other features. They are still on the shelf when your computer is broken.</p>
-                    <p>Even though I do not like to read technical documentation or education in paper form.
-                    It is outdated too quickly, not searchable and often to verbose. I prefer condensed know-how over jabbering as it happens in Podcasts.
+                    <p>Though I do not like to read technical documentation or education in paper form.
+                    It is outdated too quickly, not searchable and often to verbose. I prefer condensed know-how over jabbering as it happens in podcasts.
                     Anyway, these are important books to me which I read and often incorporate into my thoughts:</p>
                     <ul>
                         <li>Thus Spoke Zarathustra by Friedrich Nietzsche</li>
@@ -208,7 +208,7 @@
                         After using Facebook, Mastodon and Twitter for several years I drew the conclusion it is an utter waste of time.
                         You invest attention and get nothing of worth out of it. And did I already mention how much I hate advertisement?
                         Nearly everybody should be aware of the privacy issues by now, too. Sadly only few people care and are consequent.
-                        So in the end I quit. To me it is nothing else than the capitalist counterpart to Chinas mass surveillance.
+                        So in the end I quit. To me it is nothing else than the capitalist counterpart to China's mass surveillance.
                         I do not want to voluntarily shovel money into the pockets of people harvesting my data.</p>
                     <p>In the past I used to spend a lot time online and in a purely virtual layer of our society.
                         I am glad I found my way back to focus on life off screen where the actual life happens.
