Restored Mastodon link. I decided to continue being active there.

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                         Engagement neither contributes to my value as a developer nor to my perception of a balanced life.
                         Xing (a German competitor of LinkedIn) turned out to be comparable to voluntarily signing up for spam while being redundant next to LinkedIn. I deleted my account after four years at the end of 2018.</p>
                     <ul class="icons">
+                        <li><a href="https://mastodon.technology/@peterthomashorn" target="_blank" rel="me"><img src="images/mastodon.svg" alt="Mastodon" class="icon" /></a></li>
                         <li><a href="https://github.com/peterthomashorn" target="_blank"><img src="images/github.svg" alt="GitHub" class="icon" /></a></li>
                         <li><a href="https://www.linkedin.com/in/peterthomashorn/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn" class="icon" /></a></li>
                         <li><a href="javascript:navigateToEncryptedAddress('nbjmup;qfufsuipnbtipsoAjdmpve/dpn');"><img src="images/envelope.svg" alt="E-Mail" class="icon" /></a></li>
