Further spelling corrections.

--- a/index.html
+++ b/index.html
@@ -112,18 +112,18 @@
                         It feels like a big move forward.
                         Back to four strings but with two humbuckers and active electronics with an amazing tone range offers a completely different sound and playing experience.
                         Maybe I won't play my Tanglewood much anymore but it has been for such a long time already, it is part of the family and will not get abandoned.
-                        When I am at home I usually use headphones or my Hi-Fi speakers for practicing.
+                        When I am at home, I usually use headphones or my Hi-Fi speakers for practicing.
                         Always part of the setup is my BOSS GT-1B multi-effects processor which I consider a decent product after trying out different devices of that kind.
                         There are tons of possibilities and one utilizes its full potential only after a long time.</p>
                     <p>In the past I used to play much over my iMac with signal processors like Native Instruments Guitar Rig, AmpliTube or EZmix.
                         Maybe it is because of my professional background that I do not have reservations as typical for rather conservative musicians.
                         With my recent equipment choices my preference changed: I like to play with my ESP, GT-1B and 200B without the hassle of a computer.
-                        In fact I became tired of the wiring, the maintenance and the interaction for jamming.
+                        In fact, I became tired of the wiring, the maintenance and the interaction for jamming.
                         I return in case of song writing or recording to Guitar Pro and REAPER on the computer, though.</p>
                     <h3>Playing the electric guitar</h3>
                     <p>One year after I started with the bass guitar a few savings manifested in the cheapest electric guitar I could buy on the internet: a brand new Chinese no-name with a body of compressed wood for 40€.
-                        Some saturdays I played from 10 in the morning until 10 in the evening.
-                        Measured by todays standards the sound was awful and I had to retune every 10 minutes while the strings felt like cutting into my finger tips.
+                        Some Saturdays I played from 10 in the morning until 10 in the evening.
+                        Measured by todays standards the sound was awful and I had to retune every 10 minutes while the strings felt like cutting into my fingertips.
                         But I learned a lot and completely by myself.</p>
                     <p>In 2009 I bought a matte black Schecter Diamond Demon from the first salary I got.
                         That was a hefty upgrade totally worth it.
@@ -204,7 +204,7 @@
             <div class="wrap">
                 <div class="gutter">
                     <h2>Me Elsewhere</h2>
-                    <p>The overwhelming amount of multimedial input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
+                    <p>The overwhelming amount of multimedia input needs aggressive filtering and conscious consumption to not let it numb and distract our senses from what actually matters.
                         After using Facebook, Mastodon and Twitter for several years I drew the conclusion it is an utter waste of time.
                         You invest attention and get nothing of worth out of it. And did I already mention how much I hate advertisement?
                         Nearly everybody should be aware of the privacy issues by now, too. Sadly only few people care and are consequent.
